update security